index.html: Added images

--- a/web/index.html
+++ b/web/index.html
@@ -141,6 +141,9 @@ footer{	margin-top: 2em;
 				<img src='https://api.dopravniinfo.cz/VmsImage.ashx?vms=311' loading=lazy style="height: 90px; border: 0px;" alt="Tabule 40,44 km, směr Praha">
 			</a>
 		</div>
+
+		<a href='./pics/clouds_eu.gif' ><img src='./pics/clouds_eu.webp' loading=lazy width=600 height=390 style="margin: 5px;"></a>
+
 		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
 		<div style="display: inline-block;">
 			<a href="http://jabbapoint.local/motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
@@ -149,8 +152,8 @@ footer{	margin-top: 2em;
 		</div>
 
 		{{.LocalNews}}
-		{{.Tannoy}}
 
+		{{.Tannoy}}
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
 			
