--- a/web/index.html
+++ b/web/index.html
@@ -146,11 +146,15 @@ footer{	margin-top: 2em;
 
 		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
 		<div style="display: inline-block;">
-			<a href="http://jabbapoint.local/motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
-			<a href="http://jabbapoint.local/f1.html"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
+			<a href="./motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
+			<a href="./f1.html"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
 			<a href="./feeds.html?lang=cs-CZ"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
+			<a href="https://www.chmi.cz/files/portal/docs/meteo/rad/inca-cz/short.html" target="_blank"><h3 style="display: inline-block; margin: 10px;">Radar</h3></a>
+			<a href="https://www.flightradar24.com/50.53,14.98/12" target="_blank"><h3 style="display: inline-block; margin: 10px;">Radarovič</h3></a>
+
 		</div>
 
+		<a href='https://kamery.mh2net.cz/img/snap-klub.jpeg' target="_blank" id="snap-klub"><img src='./pics/snap-klub.webp' id="snap_klub_img" loading=lazy width=340 height=200 style="margin: 5px; display:inline-block"></a>
 		{{.LocalNews}}
 
 		{{.Tannoy}}
