--- a/web/index.html
+++ b/web/index.html
@@ -158,6 +158,8 @@ footer{	margin-top: 2em;
 		{{.LocalNews}}
 
 		{{.Tannoy}}
+
+		{{.Crashnet}}
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
 			
@@ -167,6 +169,14 @@ footer{	margin-top: 2em;
 			panImg.src = panValues[0]
 			var panLink = document.getElementById("panorama_link")
 			panLink.href = panValues[1]
+
+			var dateSpanList = document.getElementsByClassName("date")
+			for (var i = 0; i < dateSpanList.length; i++) {
+				time = dateSpanList[i].innerHTML
+				var d = new Date(time)
+				var date_output = new Intl.DateTimeFormat(lang, {weekday: "long", day:"numeric", month:"long", hour: "numeric", minute: "numeric"}).format(d)
+				dateSpanList[i].innerHTML = date_output
+			}
 
 			panSelect.onchange = function() {
 				var panValues = panSelect.value.split(";")
