--- a/web/index.html
+++ b/web/index.html
@@ -167,22 +167,22 @@ footer{	margin-top: 2em;
 		<!--<script async="" src="./js/module-wttrin-widget.js"></script> -->
 		<script>
 			
-			var panSelect = document.getElementById("select_panorama")
-			var panValues = panSelect.value.split(";")
-			var panImg = document.getElementById("panorama_img")	
-			panImg.src = panValues[0]
-			var panLink = document.getElementById("panorama_link")
-			panLink.href = panValues[1]
+//			var panSelect = document.getElementById("select_panorama")
+//			var panValues = panSelect.value.split(";")
+//			var panImg = document.getElementById("panorama_img")	
+//			panImg.src = panValues[0]
+//			var panLink = document.getElementById("panorama_link")
+//			panLink.href = panValues[1]
 
 
-			panSelect.onchange = function() {
-				var panValues = panSelect.value.split(";")
-				var panImg = document.getElementById("panorama_img")	
-				panImg.src = panValues[0]
-				var panLink = document.getElementById("panorama_link")
-				panLink.href = panValues[1]
-
-			}
+//			panSelect.onchange = function() {
+//				var panValues = panSelect.value.split(";")
+//				var panImg = document.getElementById("panorama_img")	
+//				panImg.src = panValues[0]
+//				var panLink = document.getElementById("panorama_link")
+//				panLink.href = panValues[1]
+//
+//			}
 			var timezoneSelect = document.getElementById("select_timezone")
 			var timezonePar = document.getElementById("zone-date")
 			timezoneSelect.onchange = function() {
