Replacing cnb-rates server

--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@ footer{	margin-top: 2em;
 		<a href='https://kalendar.beda.cz/' target="_blank"><img src='./pics/kalendar-m.png' loading=lazy alt="kalendář" style="margin: 5px;"></a>
 		<div class="cs-CZ" style="display: inline-block">
 			<p style="max-width: 550px;"><a href="http://svatek.jabbapoint.local/">{{.NameDay}}</a></p>
-			<p style="display:inline-block"><a id="curr" href="http://czk.jabbapoint.local/">{{.Currency}}</a></p>
+			<p style="display:inline-block"><a id="curr" href="./cnb-rates.html">{{.Currency}}</a></p>
 			<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">{{.CryptoCurrency}}</a></p>
 		</div>
 		<div id="text_forecast">
@@ -120,11 +120,13 @@ footer{	margin-top: 2em;
 			</div>
 			-->
 			<a href='https://www.mnhradiste.cz/kamera/mhcam1.jpg' target="_blank" id="panorama_link"><img src='./pics/mhcam1.webp' id="panorama_img" loading=lazy width=340 height=200 style="margin: 5px; display:inline-block"></a>
+			<!--
 			<select name="camera" id="select_panorama">
 				<option value="./pics/mhcam1.webp;https://www.mnhradiste.cz/kamera/mhcam1.jpg">Mnichovo Hradiště</option>
 				<option value="https://webkamery.gc-system.cz/thumb.php?img=_data/stribro/stribro.jpg&thumb_width=320;https://webkamery.gc-system.cz/_data/stribro/stribro.jpg">Stříbro</option>
 				<option value="https://apl.brno.cz/kamery/mal3/image.jpg;https://apl.brno.cz/kamery/mal3/image.jpg">Brno</option>
 			</select>
+			-->
 		</div>
 
 		
