--- a/web/traffic.html
+++ b/web/traffic.html
@@ -43,6 +43,12 @@ div{
 					<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3986&rnd=zJDg3Mbq' loading=lazy>
 				</a>
 			</div>
+			<div>
+				<h4>Jánky</h4>
+				<a href='https://kamery.humlnet.cz/images/webcams/janskelazne/640x480.jpg' >
+					<img src='https://kamery.humlnet.cz/images/webcams/janskelazne/640x480.jpg' loading=lazy>
+				</a>
+			</div>
 			<h3>I/35, Turnov - Liberec</h3>
 			<hr>
 			<div>
