--- a/web/index.html
+++ b/web/index.html
@@ -66,12 +66,6 @@ footer{	margin-top: 2em;
 	<p id="zone-date" style="display: inline-block"></p>
 	</div>
 	<hr style="color: beige">
-	<div class="search" id="search_engine" style="display:inline-block; margin:20px;">
-		<form action="https://searx.tuxcloud.net/search" autocomplete="off" target="_blank" method="get" style="display:inline-block">
-			<input id="q" name="q" type="text" placeholder="" autocomplete="off">
-			<button type="submit" id="submit">OK</button>
-		</form>
-	</div>
 
 	<nav>
 		<ul>
@@ -95,26 +89,11 @@ footer{	margin-top: 2em;
 				<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
 			</a>
 		</div>
-		<div class="cs-CZ" id="english" style="display:inline-block; margin:20px;">
-			<form action="https://slovniky.lingea.cz/anglicko-cesky/" autocomplete="off" target="_blank" method="get" style="display:inline-block">
-				<input id="topic" name="word" type="text" placeholder="🇬🇧" maxlength="50" autocomplete="off">
-				<button type="submit" id="submit">OK</button>
-			</form>
-		</div>
-		<div class="cs-CZ" id="deutsch" style="display: inline-block; margin:20px;">
-			<form action="https://slovniky.lingea.cz/nemecko-cesky/" autocomplete="off" target="_blank" method="get" style="display:inline-block">
-				<input id="topic" name="word" type="text" placeholder="🇩🇪" maxlength="50" autocomplete="off">
-				<button type="submit" id="submit">OK</button>
-			</form>
-		</div>
-		<div style="display: inline-block; margin:20px;">
-			<a href="https://go.dev/" target="_blank">Go</a>
-			<form action="https://pkg.go.dev/search?" autocomplete="off" method="get" target="_blank" style="display:inline-block">
-				<input id="topic" name="q" type="text" maxlength="50">
-				<button type="submit" id="submit">OK</button>
-			</form>
-		</div>
-		<div>
+		<!-- rain -->
+		<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
+		<!-- sun and clouds -->
+		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' loading=lazy width=360 height=227 style="margin: 5px"></a>
+		<div style=display:inline-block>
 			<!--
 			<div id="wttr-in-module" style="display: inline-block">
 				<a href='{{.WttrLink}}' target="_blank" target='wttr.in' id="wttr-link"><image id="weather-img" src='{{.WttrSrc}}' loading=lazy style="border: 0px" alt="Current weather in"></a>
@@ -127,7 +106,7 @@ footer{	margin-top: 2em;
 			</div>
 			-->
 			<a href='https://www.mnhradiste.cz/kamera/mhcam1.jpg' target="_blank" id="panorama_link"><img src='./pics/mhcam1.webp' id="panorama_img" loading=lazy width=340 height=200 style="margin: 5px; display:inline-block"></a>
-		<a href="http://www.mhpocasi.unas.cz" target="_blank"> <img src="http://www.mhpocasi.unas.cz/webfiles/summary.jpg" width=377 height=243 border=0 title="Amatérská meteostanice Mnichovo Hradiště" alt="Mnichovo Hradiště"></a>
+			<!--<a href="http://www.mhpocasi.unas.cz" target="_blank"> <img src="http://www.mhpocasi.unas.cz/webfiles/summary.jpg" width=377 height=243 border=0 title="Amatérská meteostanice Mnichovo Hradiště" alt="Mnichovo Hradiště"></a>-->
 			<!--
 			<select name="camera" id="select_panorama">
 				<option value="./pics/mhcam1.webp;https://www.mnhradiste.cz/kamera/mhcam1.jpg">Mnichovo Hradiště</option>
@@ -137,11 +116,28 @@ footer{	margin-top: 2em;
 			-->
 		</div>
 
+		<div style="display:inline-block">	
+			<div class="cs-CZ" id="english" style="display:block; margin:20px;">
+				<form action="https://slovniky.lingea.cz/anglicko-cesky/" autocomplete="off" target="_blank" method="get" style="display:inline-block">
+					<input id="topic" name="word" type="text" placeholder="🇬🇧" maxlength="50" autocomplete="off">
+					<button type="submit" id="submit">OK</button>
+				</form>
+			</div>
+			<div class="cs-CZ" id="deutsch" style="display: block; margin:20px;">
+				<form action="https://slovniky.lingea.cz/nemecko-cesky/" autocomplete="off" target="_blank" method="get" style="display:inline-block">
+					<input id="topic" name="word" type="text" placeholder="🇩🇪" maxlength="50" autocomplete="off">
+					<button type="submit" id="submit">OK</button>
+				</form>
+			</div>
+			<div style="display:block; margin:20px;">
+				<a href="https://go.dev/" target="_blank">Go</a>
+				<form action="https://pkg.go.dev/search?" autocomplete="off" method="get" target="_blank" style="display:inline-block">
+					<input id="topic" name="q" type="text" maxlength="50">
+					<button type="submit" id="submit">OK</button>
+				</form>
+			</div>
+		</div>
 		
-		<!-- rain -->
-		<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
-		<!-- sun and clouds -->
-		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' loading=lazy width=360 height=227 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_0days.gif' ><img src='./pics/forecastPrecip_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
