svatek.go: Nameday cached to LRU

--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@ footer{	margin-top: 2em;
 	<main  style="margin-top: 20px;">
 		<a href='https://kalendar.beda.cz/' target="_blank"><img src='./pics/kalendar-m.png' loading=lazy alt="kalendář" style="margin: 5px;"></a>
 		<div class="cs-CZ" style="display: inline-block">
-			<p style="max-width: 550px;"><a href="./svatek.html">{{.NameDay}}</a></p>
+			<p style="max-width: 550px;"><a href="./svatek.html">📆{{.NameDay}}</a></p>
 			<p style="display:inline-block"><a id="curr" href="./cnb-rates.html">💵{{.Currency}}</a></p>
 			<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">🪙{{.CryptoCurrency}}</a></p>
 		</div>
