--- a/web/index.html
+++ b/web/index.html
@@ -155,9 +155,9 @@ footer{	margin-top: 2em;
 		<a href='./pics/clouds_eu.gif' ><img src='./pics/clouds_eu.webp' loading=lazy width=600 height=390 style="margin: 5px;"></a>
 
 		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
-		<div style="display: inline-block;">
-			<a href="./motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
-			<a href="./f1.html"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
+		<div style="display: block;">
+			<!--<a href="./motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
+			<a href="./f1.html"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a> -->
 			<a href="./feeds.html?lang=cs-CZ"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
 			<a href="https://www.chmi.cz/files/portal/docs/meteo/rad/inca-cz/short.html" target="_blank"><h3 style="display: inline-block; margin: 10px;">Radar</h3></a>
 			<a href="https://www.flightradar24.com/50.53,14.98/12" target="_blank"><h3 style="display: inline-block; margin: 10px;">Radarovič</h3></a>
@@ -169,7 +169,7 @@ footer{	margin-top: 2em;
 
 		{{.Tannoy}}
 
-		{{.Crashnet}}
+
 		<!--<script async="" src="./js/module-wttrin-widget.js"></script> -->
 		<script>
 			
