index.html: Cosmetic changes

--- a/web/index.html
+++ b/web/index.html
@@ -130,9 +130,8 @@ footer{	margin-top: 2em;
 				</form>
 			</div>
 			<div style="display:block; margin:20px;">
-				<a href="https://go.dev/" target="_blank">Go</a>
 				<form action="https://pkg.go.dev/search?" autocomplete="off" method="get" target="_blank" style="display:inline-block">
-					<input id="topic" name="q" type="text" maxlength="50">
+					<input id="topic" name="q" type="text" placeholder="Go" maxlength="50">
 					<button type="submit" id="submit">OK</button>
 				</form>
 			</div>
